# Exam-helper

./: .env.example  .gitignore  README.md  design.md  main.py  package.json  pyproject.toml  start_llm.bat
.agents/rules/: project-helper.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20c8e8cc73fc_add_outline_status_and_content_fields.py  20c8e8cc73fc_描述你的修改.py  27a17c220348_add_duplicate_of_formal_id.py  3274914add2c_add_difficulty_field.py  4ce82408b5ad_add_status_and_content_to_outline.py  6288407ee7a2_refine_user_username_column_type_and_index.py  6288407ee7a2_描述你的修改_如_增加is_deleted字段.py  6621fdf7c65b_add_course_system.py  c6d455a002ed_add_soft_delete_and_cascading.py
docs/: api_change_checklist.md  api_specification.md  design.md  migration_conventions.md
scripts/: api_explorer.py  create_superuser.py  demo_agent_sdk.py  demo_extract_agent.py  dev.py  extract_english_outline.py  init_db.py  patch_db.py  test_question_ingest.py  verify_db.py
src/app/: layout.tsx
src/config/: settings.py
src/core/: llm.py
src/db/: base.py  models.py  session.py
src/services/: __init__.py  main.py
tests/: conftest.py  test_llm.py  test_prompt_loader.py
tests/api/: conftest.py  test_library_api.py  test_outline_api.py  test_staging_api.py
tests/db/: test_outline_persistence.py
tests/temp/: test_db_init.py  test_outline_agent_manual.py
tests/tools/: test_edu_planner.py
tests/utils/: test_outline_processor.py
web/: README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml
web/app/: globals.css  page.tsx
web/components/: CreateOutlineWizard.tsx  DashboardSidebar.tsx  DeleteConfirmationModal.tsx  SmartContent.tsx
web/i18n/: request.ts
(+154 files in other folders)
